--- a/index.html
+++ b/index.html
@@ -22,8 +22,14 @@
 <body>
   <main> 
     <article class="cn__purple">
+      <picture class="comas">
+        <source media="(max-width: 1030px)" srcset="">
+        <source media="(min-width: 1031px)" srcset="images/bg-pattern-quotation.svg">
+        <img src="" alt="" loading="lazy">
+      </picture>
+
       <div class="infoUser">
-        <img src="images/image-daniel.jpg" alt="Daniel Clifford">
+        <img class="userFoto" src="images/image-daniel.jpg" alt="Daniel Clifford">
         <div class="txt__user">
           <h3 class="name">Daniel Clifford</h3>
           <p class="carge">Verified Graduate</p>
@@ -44,7 +50,7 @@
 
     <article class="cn__grey">
       <div class="infoUser">
-        <img src="images/image-jonathan.jpg" alt="Jonathan Walters">
+        <img class="userFoto" src="images/image-jonathan.jpg" alt="Jonathan Walters">
         <div class="txt__user">
           <h3 class="name">Jonathan Walters</h3>
           <p class="carge">Verified Graduate</p>
@@ -58,9 +64,10 @@
 
     </article>
 
+
     <article class="cn__white">
       <div class="infoUser">
-        <img src="images/image-jeanette.jpg" alt="Jeanette Harmon">
+        <img class="userFoto" src="images/image-jeanette.jpg" alt="Jeanette Harmon">
         <div class="txt__user">
           <h3 class="name">Jeanette Harmon</h3>
           <p class="carge">Verified Graduate</p>
@@ -76,7 +83,7 @@
 
     <article class="cn__dark">
       <div class="infoUser">
-        <img src="images/image-patrick.jpg" alt="Patrick Abrams">
+        <img class="userFoto" src="images/image-patrick.jpg" alt="Patrick Abrams">
         <div class="txt__user">
           <h3 class="name">Patrick Abrams</h3>
           <p class="carge">Verified Graduate</p>
@@ -95,7 +102,7 @@
 
     <article class="cn__white">
       <div class="infoUser">
-        <img src="images/image-kira.jpg" alt="Kira Whittle">
+        <img class="userFoto" src="images/image-kira.jpg" alt="Kira Whittle">
         <div class="txt__user">
           <h3 class="name">Kira Whittle</h3>
           <p class="carge">Verified Graduate</p>
